[project]
name = "faceblur"
version = "0.1.0"
description = "Face blur server with FastAPI and Flutter client"
readme = "README.md"
requires-python = "==3.11.13"
dependencies = [
    "dlib==19.24.9",
    "fastapi==0.115.12",
    "gradio==5.29.1",
    "numpy==1.26.4",
    "opencv-python==4.9.0.80",
    "uvicorn==0.34.2",
    "python-multipart==0.0.18",
    "pillow==10.1.0",
]

[project.optional-dependencies]
dev = [
    "black==23.0.0",
    "isort==5.12.0",
    "pytest==7.4.0",
    "mypy==1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=faceblur"

[project.urls]
Homepage = "https://github.com/yourusername/faceblur"
Repository = "https://github.com/yourusername/faceblur.git"
